--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     </main>
 
     <footer class="back-foot ">
-      <div class="container box-footer">
+      <div class="container">
         <a class="link web-top" href="./index.html"
           >Web <span class="studio-top-footer">Studio</span></a
         >
