--- a/portfolio.html
+++ b/portfolio.html
@@ -61,11 +61,11 @@
     </header>
     <!-- Filters, btn-navigation -->
     <main class="contaier-site">
-      <section>
+      <section class="section-portfolio">
         <h1 hidden>hidden this text</h1>
         <!-- <div class="button box "> -->
        <div class="box">
-          <ul class="list feature-list ">
+          <ul class="list feature-sublist ">
             <li class="item-btn">
               <button type="button" class="nav-btn hover-btn">All</button>
             </li>
